# skellicap

./: LICENSE  Makefile  README.md  dashboard.html  pyproject.toml  requirements.txt
skellicap/: __init__.py  cli.py  pose_analyzer.py  pose_tracker.py
viz/: dashboard.html
